# crabture

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
packaging/: PKBUILD
src/: main.rs
