[package]
name = "crabture"
version = "0.1.2"
edition = "2024"
description = "Fast Wayland screenshots for Hyprland (rofi + grimblast + hyprpicker), written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pin4man/crabture"
homepage = "https://github.com/pin4man/crabture"
keywords = ["wayland", "hyprland", "screenshot", "grimblast", "rofi"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 2
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
which = "6"
time = { version = "0.3", features = ["macros", "local-offset"] }
